@@ -65,7 +65,7 @@ import org.apache.tools.ant.Project;
 import org.apache.tools.ant.BuildException;
 
 /**
- * This class is used to generate iPlanet Application Server (iAS) 6.0 stubs and 
+ * This class is used to generate iPlanet Application Server (iAS) 6.0 stubs and
  * skeletons and build an EJB Jar file.  It is designed to be used with the Ant
  * <code>ejbjar</code> task.  If only stubs and skeletons need to be generated
  * (in other words, if no JAR file needs to be created), refer to the
@@ -79,18 +79,18 @@ import org.apache.tools.ant.BuildException;
  *                           within the "descriptordir" namespace.  This is a
  *                           required attribute.
  *     <li><i>classpath</i> -- The classpath used when generating EJB stubs and
- *                             skeletons.  This is an optional attribute (if 
+ *                             skeletons.  This is an optional attribute (if
  *                             omitted, the classpath specified in the "ejbjar"
  *                             parent task will be used).  If specified, the
  *                             classpath elements will be prepended to the
  *                             classpath specified in the parent "ejbjar" task.
  *                             Note that nested "classpath" elements may also be
  *                             used.
- *     <li><i>keepgenerated</i> -- Indicates whether or not the Java source 
- *                                 files which are generated by ejbc will be 
- *                                 saved or automatically deleted.  If "yes", 
- *                                 the source files will be retained.  This is 
- *                                 an optional attribute (if omitted, it 
+ *     <li><i>keepgenerated</i> -- Indicates whether or not the Java source
+ *                                 files which are generated by ejbc will be
+ *                                 saved or automatically deleted.  If "yes",
+ *                                 the source files will be retained.  This is
+ *                                 an optional attribute (if omitted, it
  *                                 defaults to "no").
  *     <li><i>debug</i> -- Indicates whether or not the ejbc utility should
  *                         log additional debugging statements to the standard
@@ -98,23 +98,23 @@ import org.apache.tools.ant.BuildException;
  *                         will be generated (if omitted, it defaults to "no").
  *     <li><i>iashome</i> -- May be used to specify the "home" directory for
  *                           this iPlanet Application server installation.  This
- *                           is used to find the ejbc utility if it isn't 
- *                           included in the user's system path.  This is an 
- *                           optional attribute (if specified, it should refer  
+ *                           is used to find the ejbc utility if it isn't
+ *                           included in the user's system path.  This is an
+ *                           optional attribute (if specified, it should refer
  *                           to the <code>[install-location]/iplanet/ias6/ias
- *                           </code> directory).  If omitted, the ejbc utility 
+ *                           </code> directory).  If omitted, the ejbc utility
  *                           must be on the user's system path.
- *     <li><i>suffix</i> -- String value appended to the JAR filename when 
+ *     <li><i>suffix</i> -- String value appended to the JAR filename when
  *                          creating each JAR.  This attribute is not required
  *                          (if omitted, it defaults to ".jar").
  *   </ul>
  * <p>
  * For each EJB descriptor found in the "ejbjar" parent task, this deployment
- * tool will locate the three classes that comprise the EJB.  If these class 
- * files cannot be located in the specified <code>srcdir</code> directory, the 
- * task will fail.  The task will also attempt to locate the EJB stubs and 
- * skeletons in this directory.  If found, the timestamps on the stubs and 
- * skeletons will be checked to ensure they are up to date.  Only if these files 
+ * tool will locate the three classes that comprise the EJB.  If these class
+ * files cannot be located in the specified <code>srcdir</code> directory, the
+ * task will fail.  The task will also attempt to locate the EJB stubs and
+ * skeletons in this directory.  If found, the timestamps on the stubs and
+ * skeletons will be checked to ensure they are up to date.  Only if these files
  * cannot be found or if they are out of date will ejbc be called.
  *
  * @see    IPlanetEjbc
@@ -132,7 +132,7 @@ public class IPlanetDeploymentTool extends GenericDeploymentTool {
      * Filenames of the standard EJB descriptor (which is passed to this class
      * from the parent "ejbjar" task) and the iAS-specific EJB descriptor
      * (whose name is determined by this class).  Both filenames are relative
-     * to the directory specified by the "srcdir" attribute in the ejbjar task. 
+     * to the directory specified by the "srcdir" attribute in the ejbjar task.
      */
     private String  descriptorName;
     private String  iasDescriptorName;
@@ -150,7 +150,7 @@ public class IPlanetDeploymentTool extends GenericDeploymentTool {
      * written in the completed JAR file as "ias-ejb-jar.xml".  This is the
      * naming convention implemented by iAS.
      */
-    private static final String IAS_DD = "ias-ejb-jar.xml";    
+    private static final String IAS_DD = "ias-ejb-jar.xml";
 
     /**
      * Setter method used to store the "home" directory of the user's iAS
@@ -196,7 +196,7 @@ public class IPlanetDeploymentTool extends GenericDeploymentTool {
     }
 
     /**
-     * Since iAS doesn't generate a "generic" JAR as part of its processing, 
+     * Since iAS doesn't generate a "generic" JAR as part of its processing,
      * this attribute is ignored and a warning message is displayed to the user.
      *
      * @param inString the string to use as the suffix.  This parameter is
@@ -211,8 +211,9 @@ public class IPlanetDeploymentTool extends GenericDeploymentTool {
 
     public void processDescriptor(String descriptorName, SAXParser saxParser) {
         this.descriptorName = descriptorName;
+        this.iasDescriptorName = null;
 
-        log("iPlanet Deployment Tool processing: " + descriptorName + " (and " 
+        log("iPlanet Deployment Tool processing: " + descriptorName + " (and "
                 + getIasDescriptorName() + ")", Project.MSG_VERBOSE);
 
         super.processDescriptor(descriptorName, saxParser);
@@ -227,7 +228,7 @@ public class IPlanetDeploymentTool extends GenericDeploymentTool {
      *                           descriptor
      * @throws BuildException If the user selections are invalid.
      */
-    protected void checkConfiguration(String descriptorFileName, 
+    protected void checkConfiguration(String descriptorFileName,
                                     SAXParser saxParser) throws BuildException {
 
         int startOfName = descriptorFileName.lastIndexOf(File.separatorChar) + 1;
@@ -243,7 +244,7 @@ public class IPlanetDeploymentTool extends GenericDeploymentTool {
         File iasDescriptor = new File(getConfig().descriptorDir,
                                         getIasDescriptorName());
         if ((!iasDescriptor.exists()) || (!iasDescriptor.isFile())) {
-            String msg = "The iAS-specific EJB descriptor (" 
+            String msg = "The iAS-specific EJB descriptor ("
                             + iasDescriptor + ") was not found.";
             throw new BuildException(msg, getLocation());
         }
@@ -265,12 +266,12 @@ public class IPlanetDeploymentTool extends GenericDeploymentTool {
      *                           descriptor
      * @return                   Hashtable of EJB class (and other) files to be
      *                           added to the completed JAR file
-     * @throws IOException       An IOException from the parser, possibly from 
-     *                           the byte stream or character stream 
-     * @throws SAXException      Any SAX exception, possibly wrapping another 
+     * @throws IOException       An IOException from the parser, possibly from
+     *                           the byte stream or character stream
+     * @throws SAXException      Any SAX exception, possibly wrapping another
      *                           exception
      */
-    protected Hashtable parseEjbFiles(String descriptorFileName, 
+    protected Hashtable parseEjbFiles(String descriptorFileName,
                          SAXParser saxParser) throws IOException, SAXException {
 
         Hashtable files;
@@ -322,7 +323,7 @@ public class IPlanetDeploymentTool extends GenericDeploymentTool {
             }
         }
 
-        return files;   
+        return files;
     }
 
     /**
@@ -367,14 +368,14 @@ public class IPlanetDeploymentTool extends GenericDeploymentTool {
 
     /**
      * Determines the name of the iAS-specific EJB descriptor using the
-     * specified standard EJB descriptor name.  In general, the standard 
+     * specified standard EJB descriptor name.  In general, the standard
      * descriptor will be named "[basename]-ejb-jar.xml", and this method will
      * return "[basename]-ias-ejb-jar.xml".
      *
      * @return The name of the iAS-specific EJB descriptor file.
      */
     private String getIasDescriptorName() {
-        
+
         /* Only calculate the descriptor name once */
         if (iasDescriptorName != null) {
             return iasDescriptorName;
@@ -399,7 +400,7 @@ public class IPlanetDeploymentTool extends GenericDeploymentTool {
             int endOfBaseName = descriptorName.indexOf(
                                                 getConfig().baseNameTerminator,
                                                 startOfFileName);
-            /* 
+            /*
              * Check for the odd case where the terminator and/or filename
              * extension aren't found.  These will ensure "ias-" appears at the
              * end of the name and before the '.' (if present).
@@ -411,7 +412,7 @@ public class IPlanetDeploymentTool extends GenericDeploymentTool {
                 }
             }
 
-            basename = descriptorName.substring(startOfFileName + 1, 
+            basename = descriptorName.substring(startOfFileName + 1,
                                                 endOfBaseName + 1);
             remainder = descriptorName.substring(endOfBaseName + 1);
         }
